--- a/useragreement.html
+++ b/useragreement.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 User Agreement
 Welcome to Pet Monsters. Your privacy is important to us.
 Pet Monsters (hereinafter referred to as "us") is committed to protecting our users’ (hereinafter referred to as "users" or "you") privacy. This Privacy Policy (hereinafter referred to as "Policy") details how we collect, store, use, and manage information, including but not limited to your personal information and the data you may provide or we may collect from any games (collectively, the "Services") offered on any mobile platforms (e.g., iOS and Android) or relevant websites (http://www.0egg.com/pet/, (hereinafter referred to as "website"). Please note, this Policy applies only to the data and information we collect or receive through your using of the services. We are not responsible for any acts of any third party representatives or companies, any use of their website content , the information or data you provide them, or products and services they may offer. Any link to these sites does not constitute our sponsorship or affiliate relationship with these companies or persons.
@@ -6,7 +13,7 @@ Your using of the Services represents that you have agreed on this Policy and ag
 
 If you have any questions or concerns, please contact us by using the contact information offered in the Data Manager Contact Information section in this Policy .
 
-Your information and data collected by us. 
+Your information and data collected by us.
 We may collect the following information and data:
 1.Contact information (e.g. name and email address)
 2.Username and password in our community forums
@@ -73,7 +80,7 @@ We may share your information with other companies, and this information relates
 We may share your summary or anonymous information with advertisers, publishers, business partners, sponsors, and other third parties.
 Accessing, correcting, and deleting your information
 
-According to your request, we will inform you whether we hold any of your personal information. 
+According to your request, we will inform you whether we hold any of your personal information.
 If your personal information has changed, or if you do not need our services, you can update, correct, delete inaccurate information, or delete your personal information in your account settings or by contacting us. In some circumstances we may be unable to delete your person information. Under this circumstance, we will inform you we have no recourse to do so and the reason. We will respond to your inquiries in a reasonable time.
 
 Security guarantee
@@ -89,3 +96,5 @@ We will not intentionally collect or seek personal information of children under
 
 Changes to this "Policy"
 We may update this Policy to reflect the changes of data and information policy practices. You will be notified of any major changes hereof by email (sent to the address specified in your account) before they take effect.
+</body>
+</html>
