--- a/useragreement.html
+++ b/useragreement.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   User Agreement<br>
-Welcome to Pet Monsters. Your privacy is important to us.<br>
-Pet Monsters (hereinafter referred to as "us") is committed to protecting our users’ (hereinafter referred to as "users" or "you") privacy. This Privacy Policy (hereinafter referred to as "Policy") details how we collect, store, use, and manage information, including but not limited to your personal information and the data you may provide or we may collect from any games (collectively, the "Services") offered on any mobile platforms (e.g., iOS and Android) or relevant websites (http://www.0egg.com/pet/, (hereinafter referred to as "website"). Please note, this Policy applies only to the data and information we collect or receive through your using of the services. We are not responsible for any acts of any third party representatives or companies, any use of their website content , the information or data you provide them, or products and services they may offer. Any link to these sites does not constitute our sponsorship or affiliate relationship with these companies or persons.<br>
+Welcome to Car Sort 2021. Your privacy is important to us.<br>
+Car Sort 2021 (hereinafter referred to as "us") is committed to protecting our users’ (hereinafter referred to as "users" or "you") privacy. This Privacy Policy (hereinafter referred to as "Policy") details how we collect, store, use, and manage information, including but not limited to your personal information and the data you may provide or we may collect from any games (collectively, the "Services") offered on any mobile platforms (e.g., iOS and Android) or relevant websites (http://www.0egg.com/pet/, (hereinafter referred to as "website"). Please note, this Policy applies only to the data and information we collect or receive through your using of the services. We are not responsible for any acts of any third party representatives or companies, any use of their website content , the information or data you provide them, or products and services they may offer. Any link to these sites does not constitute our sponsorship or affiliate relationship with these companies or persons.<br>
 <br>
 Your using of the Services represents that you have agreed on this Policy and agreed on processing your information and data (including your personal data) in the manner specified in this Policy. If you do not agree with these terms, please do not use these Services.<br>
 <br>
@@ -29,7 +29,7 @@ We may collect the following information and data:<br>
 12.Other information collection conventions<br>
 13.Websites include social media features, e.g. Facebook "Like" button and small tools, e.g. "Share" button or an interactive applet running on our site). These features may collect your IP address and which pages you access on our website, and Cookies may be set so that the corresponding features can run properly. Social media features and small tools are hosted by third parties or directly hosted on our website. Your interaction with these features is subject to the privacy policy of the company that provides functionality.<br>
 <br>
-We can offer you opportunities to use social networking services (like Facebook friends) to invite the contacted person, and these people can join our games, and/or you can invite them to join Pet Monsters games. This contact information is only used for the purpose of sending messages to recipients. You or a third party can contact us, and request deletion of any of this information stored on Pet Monsters databases.<br>
+We can offer you opportunities to use social networking services (like Facebook friends) to invite the contacted person, and these people can join our games, and/or you can invite them to join Car Sort 2021 games. This contact information is only used for the purpose of sending messages to recipients. You or a third party can contact us, and request deletion of any of this information stored on Car Sort 2021 databases.<br>
 <br>
 We use the IMEI identity and Advertising ID of Android users as one of the user's login credentials, so our application of collect the user's IMEI and Advertising ID only use for Login and registration credentials. We do not perform any analysis, processing, distribution, dissemination, etc., and we promise to keep any data of the user confidential.<br>
 <br>
@@ -38,7 +38,7 @@ Our primary goal for using your information is to create your account, provide y
 <br>
 We use information collected through our services for the purposes described in this Policy or to disclose information about our service. E.g., we can use the information for the following purpose:<br>
 1.Create game accounts and allow users to play our games;<br>
-2.Identify and suggest association with other Pet Monsters users;<br>
+2.Identify and suggest association with other Car Sort 2021 users;<br>
 3.Operate and improve our services;<br>
 4.Understand you and your preferences to enhance your experience and enjoyment while using our services;<br>
 5.Answer your questions, respond to your feedback, and offer client services;<br>
@@ -62,7 +62,7 @@ Our services possibly include third-party tracking and data collection and analy
 Our service providers' privacy policies may include information about their data collection and use along with additional terms and disclosures about tracking technology. We advise you to look up these privacy policies to understand more about their methods of data collection and use, Cookie use, and other similar tracking technologies.<br>
 <br>
 Mobile applications<br>
-When you on any Pet Monsters game or application on the mobile platform, we may record some kinds of information and data, e.g., you application usage, access, session times, in-app purchases, unique device ID (static/dynamic, hard drive type, media access control ("MAC") address, international mobile equipment identifier ("IMEI"), operating system ("OS") version, device name, email address (if you bind with Facebook or Google+), and your location (according to your internet protocol ("IP") address. This information helps us troubleshoot, helps us understand usage trends, and improve and optimize services and your user experience, as well as maybe be used for other purposes (e.g., according to internet ads located elsewhere in this Policy).<br>
+When you on any Car Sort 2021 game or application on the mobile platform, we may record some kinds of information and data, e.g., you application usage, access, session times, in-app purchases, unique device ID (static/dynamic, hard drive type, media access control ("MAC") address, international mobile equipment identifier ("IMEI"), operating system ("OS") version, device name, email address (if you bind with Facebook or Google+), and your location (according to your internet protocol ("IP") address. This information helps us troubleshoot, helps us understand usage trends, and improve and optimize services and your user experience, as well as maybe be used for other purposes (e.g., according to internet ads located elsewhere in this Policy).<br>
 <br>
 In addition, we have created a unique user ID to track your usage of our services. This unique user ID is associated with your private information  to keep track of the games you play.<br>
 <br>
@@ -96,6 +96,5 @@ We will not intentionally collect or seek personal information of children under
 <br>
 Changes to this "Policy"<br>
 We may update this Policy to reflect the changes of data and information policy practices. You will be notified of any major changes hereof by email (sent to the address specified in your account) before they take effect.<br>
-
 </body>
 </html>
